finish successfully up to tc14 in headless mode

--- a/Testcases3/report.html
+++ b/Testcases3/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,235135],[],[[4,0,1,0,[],[1,739,2],[]],[5,0,1,0,[],[1,743,2],[]],[6,0,1,0,[],[1,747,0],[]],[7,0,1,0,[],[1,748,1],[]],[8,0,1,0,[],[1,750,2],[]],[9,0,1,0,[],[1,753,1],[]],[10,0,1,0,[],[1,755,234372],[]]],[],[7,7,7,7]];
+window.output["suite"] = [1,2,3,0,[],[0,0,26723],[],[[4,0,1,0,[],[0,774,25934,5],[]],[6,0,1,0,[],[1,26709,2],[]],[7,0,1,0,[],[1,26712,1],[]],[8,0,1,0,[],[1,26715,1],[]],[9,0,1,0,[],[1,26717,1],[]],[10,0,1,0,[],[1,26719,1],[]],[11,0,1,0,[],[1,26721,1],[]]],[],[7,6,7,6]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Pr1","*C:\\Users\\Shriraj.Joshi\\PycharmProjects\\Automationyt\\Testcases3\\pr1.robot","*pr1.robot","*tc1","*tc2","*tc3","*tc6Modified","*tc8","*tc9","*tc14"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Pr1","*C:\\Users\\Shriraj.Joshi\\PycharmProjects\\Automationyt\\Testcases3\\pr1.robot","*pr1.robot","*tc1","*Element with locator 'name:locationText' not found.","*tc2","*tc3","*tc6Modified","*tc8","*tc9","*tc14"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:03:54","fail":0,"label":"Critical Tests","pass":7},{"elapsed":"00:03:54","fail":0,"label":"All Tests","pass":7}],[],[{"elapsed":"00:03:55","fail":0,"id":"s1","label":"Pr1","name":"Pr1","pass":7}]];
+window.output["stats"] = [[{"elapsed":"00:00:26","fail":1,"label":"Critical Tests","pass":6},{"elapsed":"00:00:26","fail":1,"label":"All Tests","pass":6}],[],[{"elapsed":"00:00:27","fail":1,"id":"s1","label":"Pr1","name":"Pr1","pass":6}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1606927709149;
+window.output["baseMillis"] = 1607258371849;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 235183;
+window.output["generated"] = 26732;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
